start maing animation

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -39,7 +39,25 @@ header {
     color: #331B1A;
     overflow: hidden;
     position: fixed;
+    /* front */
+    z-index: 1000;
+    /* animation */
+    animation-name:header;
+    animation-duration:5s;
+    animation-fill-mode:forwards;
+    opacity:0;
 }
+    
+    @keyframes header {
+      from {
+        opacity: 0;
+      }
+    
+      to {
+        opacity: 3;
+      }
+    }
+
 
 .TOP {
     line-height: 100px;
@@ -73,7 +91,22 @@ header {
     height: 100vh;
     width: 100%;
     justify-content: center;
+/* animation */
+    animation-name:top-wrapper;
+    animation-duration:3s;
+    animation-fill-mode:forwards;
+    opacity:0;
 }
+    
+    @keyframes top-wrapper {
+      from {
+        opacity: 0;
+      }
+    
+      to {
+        opacity: 3;
+      }
+    }
 
 
 .top-content {
@@ -161,7 +194,13 @@ header {
     flex-direction: column;
     align-items: center;
     position: relative;
+
 } 
+
+.section-content-dsc {
+    display: flex;
+    position: relative;
+}
 
 .section-content-buttton {
     color: #FBFDFF;
@@ -172,14 +211,32 @@ header {
     padding: 5px 10px;
     border-radius: 20px;
     font-family: 'roboto', 'Kosugi Maru';
+    border: 1px solid #ccc;
+    display: inline-block;
+    text-decoration: none; 
+    outline: none;
+    /*アニメーションの指定*/
+    transition: all .3s;
+    z-index: 500;
 }
 
+.section-content-buttton:hover {
+    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.3);
+    border-color: transparent;
+  }
 
-.section-content-yaotan img{
+.section-content-img{
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction:column;
+    justify-content: space-around;
     position: absolute;
-    top: 5%;
-    transform: translateY(-10%);
+    margin:40px 0;
+    z-index: 400;
 }
+
+.section-content-yaotan {
+    display: flex;
+    position: absolute;
+    align-items: center;
+}
+
