--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -43,248 +43,559 @@ h3 {
 }
 
 /* top */
-header {
-    display: list-item;
-    font-size: large;
-    
+    header {
+        display: list-item;
+        font-size: large;
+        
+        /* animation */
+        animation-name:header;
+        animation-duration:5s;
+        animation-fill-mode:forwards;
+        opacity:0;
+    }
+        
+        @keyframes header {
+        from {
+            opacity: 0;
+        }
+        
+        to {
+            opacity: 3;
+        }
+        }
+
+    .nav-list {
+        text-align: right;
+        margin-top: 2%;
+        margin-right: 10%;
+    }
+
+
+    /* top */
+    .top-wrapper {
+        padding: 18px;
+        text-align: center;
     /* animation */
-    animation-name:header;
-    animation-duration:5s;
-    animation-fill-mode:forwards;
-    opacity:0;
-}
-    
-    @keyframes header {
-      from {
-        opacity: 0;
-      }
-    
-      to {
-        opacity: 3;
-      }
+        animation-name:top-wrapper;
+        animation-duration:3s;
+        animation-fill-mode:forwards;
+        opacity:0;
+    }
+        
+        @keyframes top-wrapper {
+        from {
+            opacity: 0;
+        }
+        
+        to {
+            opacity: 3;
+        }
+        }
+
+
+    #top-img {
+        width: 100px;
+        height: 100px;
+        background-image: url(../../assets/image/logo.png);
+        background-repeat: no-repeat;
+        margin: auto;
     }
 
-.nav-list {
-    text-align: right;
-    margin-top: 2%;
-    margin-right: 10%;
-}
+    #top-title {
+        font-size: 64px;
+        background: linear-gradient(transparent 64%, #FFFCCE 20%);
+        max-width: fit-content;
+        margin: 5vw auto;
+    }
 
-
-/* top */
- .top-wrapper {
-    padding: 18px;
-    text-align: center;
-/* animation */
-    animation-name:top-wrapper;
-    animation-duration:3s;
-    animation-fill-mode:forwards;
-    opacity:0;
-}
-    
-    @keyframes top-wrapper {
-      from {
-        opacity: 0;
-      }
-    
-      to {
-        opacity: 3;
-      }
+    #pdf {
+        background-color: #4444441A;
+        font-size: x-large;
+        text-decoration: underline;
+        padding: 24px 0;
+        margin: 0 30%;
     }
 
 
-#top-img {
-    width: 100px;
-    height: 100px;
-    background-image: url(../../assets/image/logo.png);
-    background-repeat: no-repeat;
-    margin: auto;
-}
+    /* main */
+    .section-wrapper{
+        margin-top: 16vw;
+    }
 
-#top-title {
-    font-size: 64px;
-    background: linear-gradient(transparent 64%, #FFFCCE 20%);
-    max-width: fit-content;
-    margin: 5vw auto;
-}
+    .title {
+        text-align: left;
+        margin-left: 20vw;
+        font-size: 42px;
+        font-family: "Mr-Eaves-Modern"; 
+    }
 
-#pdf {
-    background-color: #4444441A;
-    font-size: x-large;
-    text-decoration: underline;
-    padding: 24px 0;
-    margin: 0 30%;
-}
-
-
-/* main */
-.section-wrapper{
-    margin-top: 16vw;
-}
-
-.title {
-    text-align: left;
-    margin-left: 20vw;
-    font-size: 42px;
-    font-family: "Mr-Eaves-Modern"; 
-}
-
-.subtitle {
-    text-align: left;
-    margin-left: 14vw;
-    font-size: 36px;
-    letter-spacing: 1px;
-    font-family: "TBUDGothic-Std";
-    background: linear-gradient(transparent 64%, #FFFCCE 20%);
-    max-width: fit-content;
-}
+    .subtitle {
+        text-align: left;
+        margin-left: 14vw;
+        font-size: 36px;
+        letter-spacing: 1px;
+        font-family: "TBUDGothic-Std";
+        background: linear-gradient(transparent 64%, #FFFCCE 20%);
+        max-width: fit-content;
+    }
 
 
-.text-wrapper {
-    margin: 6% 10%;
-    display: flex;
-}
+    .text-wrapper {
+        margin: 6% 10%;
+        display: flex;
+    }
 
-#concept-item{
-    width: 50%;
-    margin-right: 8%;
+    #concept-item{
+        width: 50%;
+        margin-right: 8%;
 
-}
+    }
 
-#concept-item h3{
-    display: flex;
-    justify-content: center;
-}
+    #concept-item h3{
+        display: flex;
+        justify-content: center;
+    }
 
-#concept-text{
-    width: 42%;
-    font-size: 24px;
-    text-align: justify;
-    text-justify: auto;
-}
+    #concept-text{
+        width: 42%;
+        font-size: 24px;
+        text-align: justify;
+        text-justify: auto;
+    }
 
-#concept-text p{
-    margin-bottom: 54px;
-    line-height: 54px;
-}
+    #concept-text p{
+        margin-bottom: 54px;
+        line-height: 54px;
+    }
 
-#concept-img{
-    width: 230px;
-    height: 300px;
-    background-image: url(../../assets/image/concept-img.png);
-    background-repeat: no-repeat;
-    margin-top: 60px;
-    margin-left: 40%;
-}
+    #concept-img{
+        width: 230px;
+        height: 300px;
+        background-image: url(../../assets/image/concept-img.png);
+        background-repeat: no-repeat;
+        margin-top: 60px;
+        margin-left: 40%;
+    }
 
-#text-wrapper-about{
-    margin: 4% 10%;
-}
+    #text-wrapper-about{
+        margin: 4% 10%;
+    }
 
-#about-content-wrapper{
-    display: flex;
-    align-items: baseline;
-    margin-top: 4%;
-    margin-left: 14%;
-}
+    #about-content-wrapper{
+        display: flex;
+        align-items: baseline;
+        margin-top: 4%;
+        margin-left: 14%;
+    }
 
-.about-content{
-    width: 24%; 
-    text-align: justify;
-    text-justify: auto;
-    margin-right: 4%; 
-}
+    .about-content{
+        width: 24%; 
+        text-align: justify;
+        text-justify: auto;
+        margin-right: 4%; 
+    }
 
-.about-content h4{
-    font-size:28px;
-}
+    #food{
+        background-image: url(../../assets/image/about-food.png);
+        background-repeat: no-repeat;
+        width: 120%;
+        height: 150px;
+    } 
 
-.about-content p{
-    font-size:16px;
-    line-height: 36px;
-}
+    #bicycle{
+        background-image: url(../../assets/image/about-bicycle.png);
+        background-repeat: no-repeat;
+        width: 120%;
+        height: 150px;
+    } 
 
+    #business{
+        background-image: url(../../assets/image/about-business.png);
+        background-repeat: no-repeat;
+        width: 120%;
+        height: 150px;
+    } 
 
-#text-wrapper-works{
-    align-content: center;
-    margin:  4% 26% 0 26%;
-}
+    #accounting{
+        background-image: url(../../assets/image/about-accounting.png);
+        background-repeat: no-repeat;
+        width: 120%;
+        height: 150px;
+    } 
 
-.works-content{
-    background-image: url(../../assets/image/works-back.png);
-    background-repeat: no-repeat;
-    padding: 4% 20px 20px 20px;
-    margin-bottom: 2%;
-    width: 120%;
-    height: 100%;
-}
+    .about-content h4{
+        font-size:28px;
+    }
 
-.works-content a{
-    font-family:"Mr-Eaves-Modern";
-    font-size: 38px;
-    font-weight: bold;
-}
-
-#yaotan{
-    font-family:"TBUDGothic-Std";
-    font-size: 32px;
-}
-
-.works-content p{
-    font-size: 16px;
-}
-
-#text-wrapper-contact{
-    margin:  6% 10% 10vw 10% ;
-}
-
-#text-wrapper-contact h4{
-    font-size: 30px;
-}
-
-#contact{
-    background-color: #4444441A;
-    text-decoration: underline;
-    padding: 24px 6%;
-    display: flex;
-    justify-content: space-between;
-    margin: 6% 24% 0 24% ;
-} 
-
-#contact a{
-    font-size: 20px;
-}
-
-/* //main */
+    .about-content p{
+        font-size:16px;
+        line-height: 36px;
+    }
 
 
-footer{
-    width: 100%;
-    height: auto;
-}
+    #text-wrapper-works{
+        align-content: center;
+        margin:  4% 26% 0 26%;
+    }
 
-#footer-content{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
+    .works-content{
+        background-image: url(../../assets/image/works-back.png);
+        background-repeat: no-repeat;
+        padding: 4% 20px 20px 20px;
+        margin-bottom: 2%;
+        width: 120%;
+        height: 100%;
+    }
 
-#footer-content p{
-    margin: 10px 0;
-}
+    .works-content a{
+        font-family:"Mr-Eaves-Modern";
+        font-size: 38px;
+        font-weight: bold;
+    }
 
-#footer-bar{
-    background-image: url(../../assets/image/footerbar.png);
-    background-repeat: repeat-x;
-    width: 100%;
-    height: 10px;
-}
+    #yaotan{
+        font-family:"TBUDGothic-Std";
+        font-size: 32px;
+    }
 
-#footer-logo{
-    background-image: url(../../assets/image/logo-s.png);
-    background-repeat: no-repeat;
-    width: 100px;
-    height: 50px;
-    margin-top: 20px;
+    .works-content p{
+        font-size: 16px;
+    }
+
+    #text-wrapper-contact{
+        margin:  6% 10% 10vw 10% ;
+    }
+
+    #text-wrapper-contact h4{
+        font-size: 30px;
+        font-weight: normal;
+    }
+
+    #contact{
+        background-color: #4444441A;
+        text-decoration: underline;
+        padding: 24px 6%;
+        display: flex;
+        justify-content: space-between;
+        margin: 6% 24% 0 24% ;
+    } 
+
+    #contact a{
+        font-size: 20px;
+    }
+
+    /* //main */
+
+
+    footer{
+        width: 100%;
+        height: auto;
+    }
+
+    #footer-content{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #footer-content p{
+        margin: 10px 0;
+    }
+
+    #footer-bar{
+        background-image: url(../../assets/image/footerbar.png);
+        background-repeat: repeat-x;
+        width: 100%;
+        height: 10px;
+    }
+
+    #footer-logo{
+        background-image: url(../../assets/image/logo-s.png);
+        background-repeat: no-repeat;
+        width: 100px;
+        height: 50px;
+        margin-top: 20px;
+    }
+
+/* ----------------sp---------------------------- */
+@media screen and (max-width: 1000px) {
+    header {
+        display: list-item;
+        font-size: small;
+        
+        /* animation */
+        animation-name:header;
+        animation-duration:5s;
+        animation-fill-mode:forwards;
+        opacity:0;
+    }
+        
+        @keyframes header {
+        from {
+            opacity: 0;
+        }
+        
+        to {
+            opacity: 3;
+        }
+        }
+
+    .nav-list {
+        text-align: right;
+        margin-top: 2%;
+        margin-right: 4%;
+    }
+
+
+    /* top */
+    .top-wrapper {
+        padding: 18px;
+        text-align: center;
+    /* animation */
+        animation-name:top-wrapper;
+        animation-duration:3s;
+        animation-fill-mode:forwards;
+        opacity:0;
+    }
+        
+        @keyframes top-wrapper {
+        from {
+            opacity: 0;
+        }
+        
+        to {
+            opacity: 3;
+        }
+        }
+
+
+    #top-img {
+        width: 70px;
+        height: 68px;
+        background-image: url(../../assets/image/logo-sp.png);
+        background-repeat: no-repeat;
+        margin: auto;
+    }
+
+    #top-title {
+        font-size: 34px;
+        background: linear-gradient(transparent 64%, #FFFCCE 20%);
+        max-width: fit-content;
+        margin: 18vw auto;
+    }
+
+    #pdf {
+        background-color: #4444441A;
+        font-size: large;
+        text-decoration: underline;
+        padding: 24px 0;
+        margin: 0 4%;
+    }
+
+
+    /* main */
+    .section-wrapper{
+        margin-top: 30vw;
+    }
+
+    .title {
+        text-align: left;
+        margin-left: 10vw;
+        font-size: 38px;
+        font-family: "Mr-Eaves-Modern"; 
+    }
+
+    .subtitle {
+        text-align: center;
+        font-size: 26px;
+        letter-spacing: 1px;
+        font-family: "TBUDGothic-Std";
+        background: linear-gradient(transparent 64%, #FFFCCE 20%);
+        max-width: fit-content;
+        margin: auto;
+    }
+
+
+    .text-wrapper {
+        margin: 10% 6% 0 6%;
+        display: inline-block;
+        text-align: center;
+    }
+
+    #concept-item{
+        width: 100%;
+        margin: auto;
+    }
+
+    #concept-img{
+        width: 140px;
+        height: 190px;
+        background-image: url(../../assets/image/concept-img-sp.png);
+        background-repeat: no-repeat;
+        margin: 10% auto;
+    }
+
+    #concept-text{
+        font-size: 16px;
+        width: 90%;
+        text-align: justify;
+        text-justify: auto;
+        margin: auto;
+    }
+
+    #concept-text p{
+        margin-bottom: 8%;
+        line-height: 38px;
+    }
+
+
+    #text-wrapper-about{
+        margin: 6% 10%;
+    }
+
+    #about-content-wrapper{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        width: 100%;
+        margin: 6% auto;
+    }
+
+    .about-content{
+        width: 42%; 
+        text-align: justify;
+        text-justify: auto;
+        margin: 0 auto auto auto;
+        vertical-align: text-top;
+    }
+
+    #food{
+        background-image: url(../../assets/image/food-sp.png);
+        background-repeat: no-repeat;
+        width: 100px;
+        height: 100px;
+        margin: auto;
+    } 
+
+    #bicycle{
+        background-image: url(../../assets/image/bicycle-sp.png);
+        background-repeat: no-repeat;
+        width: 100px;
+        height: 100px;
+        margin: auto;
+    } 
+
+    #business{
+        background-image: url(../../assets/image/business-sp.png);
+        background-repeat: no-repeat;
+        width: 100px;
+        height: 100px;
+        margin: auto;
+    } 
+
+    #accounting{
+        background-image: url(../../assets/image/accounting-sp.png);
+        background-repeat: no-repeat;
+        width: 100px;
+        height: 100px;
+        margin: auto;
+    } 
+
+    .about-content h4{
+        font-size:20px;
+    }
+
+    .about-content p{
+        font-size:14px;
+        line-height: 26px;
+    }
+
+
+    #text-wrapper-works{
+        align-content: center;
+        margin:  10% 0;
+    }
+
+    .works-content{
+        background-image: url(../../assets/image/works-back.png);
+        background-repeat: no-repeat;
+        padding: 6% 0 4% 10%;
+        margin: 4% auto;
+        width: 90%;
+        height: 100%;
+    }
+
+    .works-content a{
+        font-family:"Mr-Eaves-Modern";
+        font-size: 30px;
+        font-weight: bold;
+    }
+
+    #yaotan{
+        font-family:"TBUDGothic-Std";
+        font-size: 28px;
+    }
+
+    .works-content p{
+        font-size: small;
+    }
+
+    #text-wrapper-contact{
+        margin:  6% 10% 10vw 10% ;
+    }
+
+    #text-wrapper-contact h4{
+        font-size: 18px;
+        font-weight: normal;
+    }
+
+    #contact{
+        background-color: #4444441A;
+        text-decoration: underline;
+        display: block;
+        justify-content: space-between;
+        text-align: center;
+        padding: 10% 10%;
+        margin: 10% 20% 0 20% ;
+    } 
+
+    #contact a{
+        font-size: large;
+    }
+
+    /* //main */
+
+
+    footer{
+        width: 100%;
+        height: auto;
+    }
+
+    #footer-content{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #footer-content p{
+        margin: 10px 0;
+    }
+
+    #footer-bar{
+        background-image: url(../../assets/image/footerbar.png);
+        background-repeat: repeat-x;
+        width: 100%;
+        height: 10px;
+    }
+
+    #footer-logo{
+        background-image: url(../../assets/image/logo-s.png);
+        background-repeat: no-repeat;
+        width: 100px;
+        height: 50px;
+        margin-top: 20px;
+    }
+    
 }
