--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -542,7 +542,7 @@ h3 {
     }
 
     #text-wrapper-contact{
-        margin:  6% 10% 10vw 10% ;
+        margin:  6% 10% 20vw 10% ;
     }
 
     #text-wrapper-contact h4{
@@ -553,11 +553,12 @@ h3 {
     #contact{
         background-color: #4444441A;
         text-decoration: underline;
-        display: block;
-        justify-content: space-between;
+        display: flex;
+        flex-wrap: wrap;
+        flex-flow: column;
         text-align: center;
-        padding: 10% 10%;
-        margin: 10% 20% 0 20% ;
+        padding: 10% 16%;
+        margin: 12% 10%;
     } 
 
     #contact a{
@@ -580,22 +581,23 @@ h3 {
     }
 
     #footer-content p{
-        margin: 10px 0;
+        font-size: xx-small;
+        margin: 6px 0;
     }
 
     #footer-bar{
         background-image: url(../../assets/image/footerbar.png);
         background-repeat: repeat-x;
         width: 100%;
-        height: 10px;
+        height: 4px;
     }
 
     #footer-logo{
-        background-image: url(../../assets/image/logo-s.png);
+        background-image: url(../../assets/image/logo-s-sp.png);
         background-repeat: no-repeat;
-        width: 100px;
-        height: 50px;
-        margin-top: 20px;
+        width: 50px;
+        height: 24px;
+        margin-top: 14px;
     }
     
 }
