change pic of works

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -238,7 +238,25 @@ h3 {
         margin:  4% 26% 0 26%;
     }
 
-    .works-content{
+    #works-content-katten{
+        background-image: url(../../assets/image/works-back.png);
+        background-repeat: no-repeat;
+        padding: 4% 20px 20px 20px;
+        margin-bottom: 2%;
+        width: 120%;
+        height: 100%;
+    }
+
+    #works-content-craftshop{
+        background-image: url(../../assets/image/craftshop-back.png);
+        background-repeat: no-repeat;
+        padding: 4% 20px 20px 20px;
+        margin-bottom: 2%;
+        width: 120%;
+        height: 100%;
+    }
+
+    #works-content-yaotan{
         background-image: url(../../assets/image/works-back.png);
         background-repeat: no-repeat;
         padding: 4% 20px 20px 20px;
@@ -518,12 +536,30 @@ h3 {
         margin:  10% 0;
     }
 
-    .works-content{
+    #works-content-katten{
         background-image: url(../../assets/image/works-back.png);
         background-repeat: no-repeat;
-        padding: 6% 0 4% 10%;
-        margin: 4% auto;
-        width: 90%;
+        padding: 4% 20px 20px 20px;
+        margin-bottom: 2%;
+        width: 120%;
+        height: 100%;
+    }
+
+    #works-content-craftshop{
+        background-image: url(../../assets/image/craftshop-back.png);
+        background-repeat: no-repeat;
+        padding: 4% 20px 20px 20px;
+        margin-bottom: 2%;
+        width: 120%;
+        height: 100%;
+    }
+
+    #works-content-yaotan{
+        background-image: url(../../assets/image/works-back.png);
+        background-repeat: no-repeat;
+        padding: 4% 20px 20px 20px;
+        margin-bottom: 2%;
+        width: 120%;
         height: 100%;
     }
 
