--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -258,6 +258,10 @@ h3 {
         background-image: url(../../assets/image/yaotan-back.png);
     }
 
+    #works-content-cafe{
+        background-image: url(../../assets/image/cafe-back.png);
+    }
+
     #craftshop{
         font-family:"Mr-Eaves-Modern";
         font-size: 38px;
@@ -276,6 +280,12 @@ h3 {
         font-weight: bold;
     }
 
+    #cafe{
+        font-family:"TBUDGothic-Std";
+        font-size: 32px;
+        font-weight: bold;
+    }
+    
     .works-content p{
         font-size: 16px;
     }
